--- a/src/app/component/planetas/planetas.component.html
+++ b/src/app/component/planetas/planetas.component.html
@@ -1,22 +1,50 @@
 
-<p>planetas works!</p>
-
-<h1>Consumo Api Rest</h1>
-<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PLANETAS</h1>
-
-<h2>Nuestra info traida desde los servicios</h2>
-
-<div *ngFor = "let Planetas of ListaDePlanetas">
-
-      <h3 style="color: red;"> {{Planetas.name}}</h3>
-      <h4 style="color: blue;">{{Planetas.rotation_period}}</h4>
-      <h4>{{Planetas.orbital_period}}</h4>
-      <h5>{{Planetas.diameter}}</h5>
-      <h6 style="color: chocolate;">{{Planetas.climate}}</h6>
-      <h6 style="color: cyan;">{{Planetas.gravity}}</h6>
-      <h6 style="color: cyan;">{{Planetas.terrain}}</h6>
-      <h6 style="color: cyan;">{{Planetas.surface_water}}</h6>
-      <h6 style="color: cyan;">{{Planetas.populatio}}</h6>
-
-
-</div>
+<div class="fondo">
+      <div class="container">   
+      <h1 style="color: yellow;">Planetas Star Wars</h1>
+      
+      <div *ngFor = "let Planetas of ListaDePlanetas">
+            <div class="grupo">
+            <div class="contenido1"> 
+            <h3 style="color: yellow;">Nombre : </h3>
+            <h3 style="color: white;"> {{Planetas.name}}  </h3>
+            </div>
+            <div class="contenido2">  
+            <h3 style="color: yellow;">Periodo de rotacion :   </h3>
+            <h3 style="color: white;">{{Planetas.rotation_period}}</h3>
+            </div>
+            <div class="contenido3"> 
+            <h3 style="color: yellow;">Periodo de orbita : </h3>  
+            <h3 style="color: white;">{{Planetas.orbital_period}}</h3>
+            </div>
+            <div class="contenido4"> 
+            <h3 style="color: yellow;">Diametro del planeta :   </h3>
+                  <h3 style="color: white;">{{Planetas.diameter}}</h3>
+            </div>
+            <div class="contenido5"> 
+            <h3 style="color: yellow;">Clima :      </h3>
+                  <h3 style="color: white;">{{Planetas.climate}}</h3>
+            </div>
+            <div class="contenido6"> 
+            <h3 style="color: yellow;">Gravedad :  </h3>
+                  <h3 style="color: white;">{{Planetas.gravity}}</h3>
+            </div>
+            <div class="contenido7"> 
+            <h3 style="color: yellow;">Terreno :</h3>
+                  <h3 style="color: white;">{{Planetas.terrain}}</h3>
+            </div>
+            <div class="contenido8"> 
+            <h3 style="color: yellow;">Superficie del agua : </h3>
+            <h3 style="color: white;"> {{Planetas.surface_water}}</h3>
+            </div>
+            <div class="contenido9"> 
+            <h3 style="color: yellow;">Poblacion :  </h3>
+            <h3 style="color: white;"> {{Planetas.populatio}}</h3>
+            </div>
+      </div><br>
+      </div>
+      </div>
+      </div>
+      
+      
+      
